--- a/jgit/config
+++ b/jgit/config
@@ -1,3 +1,9 @@
 [filesystem "JetBrains s.r.o.|17.0.11|2094083624"]
 	timestampResolution = 1001 microseconds
 	minRacyThreshold = 0 nanoseconds
+[filesystem "JetBrains s.r.o.|17.0.12|2094083624"]
+	timestampResolution = 1504 microseconds
+	minRacyThreshold = 0 nanoseconds
+[filesystem "JetBrains s.r.o.|21.0.4|2094083624"]
+	timestampResolution = 7021 microseconds
+	minRacyThreshold = 0 nanoseconds
